--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - export PATH=$HOME/.yarn/bin:$PATH
 
 after_success:
-  - ./qshell listbucket d2-admin-cms-go -o qshell-files.txt
-  - ./qshell batchdelete --force d2-admin-cms-go -i qshell-files.txt
+  - ./qshell listbucket d2-admin-cms-go -o cdn-files.txt
+  - ./qshell batchdelete --force d2-admin-cms-go -i cdn-files.txt
   - ./qshell qupload qiniu-config
   - ./qshell cdnrefresh -dirs cdnrefresh-dirs.txt
