--- a/.env
+++ b/.env
@@ -15,3 +15,6 @@ VUE_APP_I18N_FALLBACK_LOCALE=en
 
 # element 颜色
 VUE_APP_ELEMENT_COLOR=#409EFF
+
+# 腾讯防水墙 APPID
+VUE_APP_TENCENT_CAPTCHA_APP_ID=1251180753
