--- a/.env
+++ b/.env
@@ -3,8 +3,16 @@
 # 页面 title 前缀
 VUE_APP_TITLE=D2Admin
 
-# 网络请求公用地址
-VUE_APP_API=https://api.cms.xiya.vip
+# 网络请求地址组
+# VUE_APP_API_[index]_[name]_[title]=url
+# 将会自动生成界面中的选项
+# 按 index 字段排序
+# index 最小的地址被默认激活
+VUE_APP_API_0_TEST=https://api.cms.xiya.vip
+VUE_APP_API_1_DEV=http://127.0.0.1:8888
+
+# 也可单独设置一个网络请求地址
+# VUE_APP_API=https://api.cms.xiya.vip
 
 # 仓库地址
 VUE_APP_REPO=https://github.com/d2-projects/d2-admin-cms-go
