--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "npm run serve",
     "build": "vue-cli-service build",
     "build:travis": "vue-cli-service build --mode travis",
+    "snippets": "node ./tools/snippets.js",
     "lint": "vue-cli-service lint --fix",
     "test:unit": "vue-cli-service test:unit"
   },
