--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.0",
     "vue-router": "^3.0.3",
+    "vuedraggable": "^2.23.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
