--- a/.env.preview
+++ b/.env.preview
@@ -6,8 +6,8 @@ VUE_APP_TITLE=D2Admin Preview
 # 指定构建模式
 NODE_ENV=production
 
-# 标记当前是 CI 自动构建
-VUE_APP_BUILD_MODE=TRAVIS
+# 标记当前构建预览站点
+VUE_APP_BUILD_MODE=PREVIEW
 
 # 显示源码按钮
 VUE_APP_SCOURCE_LINK=TRUE
