--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ branches:
   - master
 
 script:
-  - npm run build:travis
+  - npm run build:preview
 
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
