--- a/.github/workflows/star.yml
+++ b/.github/workflows/star.yml
@@ -14,4 +14,4 @@ jobs:
       run: |
         repo=${GITHUB_REPOSITORY//\//:}
         actor=$GITHUB_ACTOR
-        curl https://api.day.app/EweNWLE36rvVR8EFfWGq7k/$actor%20started%20you/$repo
+        curl https://api.day.app/EweNWLE36rvVR8EFfWGq7k/$actor%20star%20了你的仓库/$repo
