--- a/.github/workflows/star.yml
+++ b/.github/workflows/star.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
     - name: send bark message
       run: |
-        repo=${GITHUB_REPOSITORY//\//%2F}
+        repo=${GITHUB_REPOSITORY//\//:}
         actor=$GITHUB_ACTOR
         curl https://api.day.app/EweNWLE36rvVR8EFfWGq7k/$actor%20star%20了你的仓库/$repo
