--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npm run serve",
     "dev": "npm run serve",
     "build": "vue-cli-service build",
-    "build:preview": "NODE_OPTIONS=--max_old_space_size=4096 npm run build:preview",
+    "build:preview": "NODE_OPTIONS=--max_old_space_size=4096 vue-cli-service build --mode preview",
     "snippets": "node ./tools/snippets.js",
     "lint": "vue-cli-service lint --fix",
     "test:unit": "vue-cli-service test:unit"
