--- a/.env.github
+++ b/.env.github
@@ -3,11 +3,11 @@
 # 指定构建模式
 NODE_ENV=production
 
-# 标记当前构建预览站点
+# 标记当前构建方式
 VUE_APP_BUILD_MODE=PREVIEW
 
 # 显示源码按钮
 VUE_APP_SCOURCE_LINK=TRUE
 
 # 部署路径
-VUE_APP_PUBLIC_PATH=/d2-admin-cms-go/preview/
+VUE_APP_PUBLIC_PATH=/d2-admin-cms-go/
