--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "qs": "^6.9.1",
     "screenfull": "^5.0.0",
     "shortid": "^2.2.15",
+    "sortablejs": "^1.10.1",
     "ua-parser-js": "^0.7.20",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.1",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2",
-    "vuedraggable": "^2.23.2"
+    "vuedraggable": "^2.23.2",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@d2-projects/vue-filename-injector": "^1.1.0",
