--- a/.env
+++ b/.env
@@ -26,3 +26,13 @@ VUE_APP_ELEMENT_COLOR=#409EFF
 
 # 腾讯防水墙 APPID
 VUE_APP_TENCENT_CAPTCHA_APP_ID=2076088864
+
+# 字典约定
+# 请务必确保这里的设置和字典设置一致
+# VUE_APP_[字典名]_[字典类型]_[含义]=[值]|[值类型]
+# - 是否
+VUE_APP_DICT_IS_TRUE=1|number
+VUE_APP_DICT_IS_FALSE=2|number
+# - 菜单类型
+VUE_APP_DICT_MENU_TYPE_MENU=1|number
+VUE_APP_DICT_MENU_TYPE_BUTTON=2|number
