--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ VUE_APP_I18N_FALLBACK_LOCALE=en
 VUE_APP_ELEMENT_COLOR=#409EFF
 
 # 腾讯防水墙 APPID
-VUE_APP_TENCENT_CAPTCHA_APP_ID=2076088864
+VUE_APP_TENCENT_CAPTCHA_APP_ID=2076088864|string
 
 # 字典约定
 # 请务必确保这里的设置和字典设置一致
