--- a/.env
+++ b/.env
@@ -36,3 +36,8 @@ VUE_APP_DICT_IS_FALSE=2|number
 # - 菜单类型
 VUE_APP_DICT_MENU_TYPE_MENU=1|number
 VUE_APP_DICT_MENU_TYPE_BUTTON=2|number
+# 数字类型的字典的空值
+VUE_APP_DICT_EMPTY_NUMBER=0|number
+# 字符串类型的字典的空值
+# empty|string 的写法最后会被转换为空字符串
+VUE_APP_DICT_EMPTY_STRING=empty|string
