--- a/.env
+++ b/.env
@@ -28,14 +28,31 @@ VUE_APP_ELEMENT_COLOR=#409EFF
 VUE_APP_TENCENT_CAPTCHA_APP_ID=2076088864|string
 
 # 字典约定
+# 为了在字典发生变化时更容易修改涉及到的逻辑
 # 请务必确保这里的设置和字典设置一致
+# 请只在这里设置代码中需要的字典 切勿全部设置
+# 通常来讲只需要设置字典在表单中默认值的项目即可
 # VUE_APP_[字典名]_[字典类型]_[含义]=[值]|[值类型]
-# - 是否
+# 字典名称 - 是否
+# 全部设置 优化显示需要
 VUE_APP_DICT_IS_TRUE=1|number
 VUE_APP_DICT_IS_FALSE=2|number
-# - 菜单类型
+# 字典名称 - 状态
+# 全部设置 优化显示需要
+VUE_APP_DICT_STATUS_ACTIVE=1|number
+VUE_APP_DICT_STATUS_DISABLED=2|number
+# 字典名称 - 可见性
+# 全部设置 优化显示需要
+VUE_APP_DICT_VISIBLE_TRUE=1|number
+VUE_APP_DICT_VISIBLE_FALSE=2|number
+# 字典名称 - 菜单类型
+# 全部设置 表单切换需要
 VUE_APP_DICT_MENU_TYPE_MENU=1|number
 VUE_APP_DICT_MENU_TYPE_BUTTON=2|number
+# 字典名称 - 字典数据类型
+# 数字类型 表单默认值需要
+VUE_APP_DICT_DICT_VALUE_TYPE_NUMBER=1|number
+
 # 数字类型的字典的空值
 VUE_APP_DICT_EMPTY_NUMBER=0|number
 # 字符串类型的字典的空值 empty|string 的写法最后会被转换为空字符串
