优化动态路由

--- a/.env
+++ b/.env
@@ -33,24 +33,24 @@ VUE_APP_TENCENT_CAPTCHA_APP_ID=2076088864|string
 # 请只在这里设置代码中需要的字典 切勿全部设置
 # 通常来讲只需要设置字典在表单中默认值的项目即可
 # VUE_APP_[字典名]_[字典类型]_[含义]=[值]|[值类型]
-# 字典名称 - 是否
-# 全部设置 优化显示需要
+
+# is
 VUE_APP_DICT_IS_TRUE=1|number
 VUE_APP_DICT_IS_FALSE=2|number
-# 字典名称 - 状态
-# 全部设置 优化显示需要
+
+# status
 VUE_APP_DICT_STATUS_ACTIVE=1|number
 VUE_APP_DICT_STATUS_DISABLED=2|number
-# 字典名称 - 可见性
-# 全部设置 优化显示需要
+
+# visible
 VUE_APP_DICT_VISIBLE_TRUE=1|number
 VUE_APP_DICT_VISIBLE_FALSE=2|number
-# 字典名称 - 菜单类型
-# 全部设置 表单切换需要
+
+# menu_type
 VUE_APP_DICT_MENU_TYPE_MENU=1|number
 VUE_APP_DICT_MENU_TYPE_BUTTON=2|number
-# 字典名称 - 字典数据类型
-# 数字类型 表单默认值需要
+
+# dict_value_type
 VUE_APP_DICT_DICT_VALUE_TYPE_NUMBER=1|number
 
 # 数字类型的字典的空值
