VUE_APP_DICT_DATA_SCOPE

--- a/.env
+++ b/.env
@@ -50,6 +50,10 @@ VUE_APP_DICT_VISIBLE_FALSE=2|number
 VUE_APP_DICT_MENU_TYPE_MENU=1|number
 VUE_APP_DICT_MENU_TYPE_BUTTON=2|number
 
+# data_scope
+VUE_APP_DICT_DATA_SCOPE_ALL=1|number
+VUE_APP_DICT_DATA_SCOPE_CUSTOM=2|number
+
 # dict_value_type
 VUE_APP_DICT_DICT_VALUE_TYPE_NUMBER=1|number
 
