--- a/.env
+++ b/.env
@@ -61,3 +61,6 @@ VUE_APP_DICT_DICT_VALUE_TYPE_NUMBER=1|number
 VUE_APP_DICT_EMPTY_NUMBER=0|number
 # 字符串类型的字典的空值 empty|string 的写法最后会被转换为空字符串
 VUE_APP_DICT_EMPTY_STRING=empty|string
+
+# 表单排序类字段的最小值
+VUE_APP_FORM_SORT_MIN=1|number
