--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "text-loader": "^0.0.1",
     "vue-cli-plugin-i18n": "^0.6.0",
     "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-theme-color-replacer": "^1.3.3"
+    "webpack-bundle-analyzer": "^3.6.0"
   }
 }
