修正代码错误

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ VUE_APP_TITLE=D2Admin
 VUE_APP_API_0_TEST=https://api.cms.xiya.vip
 VUE_APP_API_1_DEV=http://127.0.0.1:8888
 
-# 也可单独设置一个网络请求地址
+# 也可单独设置一个网络请求地址 优先级大于地址组
 # VUE_APP_API=https://api.cms.xiya.vip
 
 # 仓库地址
