--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@
 # 页面 title 前缀
 VUE_APP_TITLE=D2Admin
 
+# 默认账号密码
+VUE_APP_USER=admin
+VUE_APP_PASSWORD=admin@xiya.vip
+
 # 网络请求地址组
 # VUE_APP_API_[index]_[name]_[title]=url
 # 将会自动生成界面中的选项
