--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lowdb": "^1.0.0",
     "nprogress": "^0.2.0",
     "qs": "^6.9.1",
+    "quill": "^1.3.7",
     "screenfull": "^5.0.0",
     "shortid": "^2.2.15",
     "sortablejs": "^1.10.1",
