--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
     "dayjs": "^1.8.17",
-    "element-ui": "^2.13.0",
+    "element-ui": "^2.13.1",
     "flex.css": "^1.1.7",
     "fuse.js": "^3.4.6",
     "hotkeys-js": "^3.7.3",
@@ -29,7 +29,7 @@
     "nprogress": "^0.2.0",
     "qs": "^6.9.1",
     "quill": "^1.3.7",
-    "screenfull": "^5.0.0",
+    "screenfull": "^5.0.2",
     "shortid": "^2.2.15",
     "sortablejs": "^1.10.1",
     "ua-parser-js": "^0.7.20",
@@ -52,6 +52,7 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
     "compression-webpack-plugin": "^3.0.1",
+    "cz-conventional-changelog": "3.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.23.7",
@@ -61,5 +62,10 @@
     "vue-cli-plugin-i18n": "^0.6.0",
     "vue-template-compiler": "^2.6.10",
     "webpack-bundle-analyzer": "^3.6.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
